# spTimeHelperPy

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.ini  example01.py  example02.py  example03.py  example04.py
src/spTimeHelperPy/: TimeHelper.py  __init__.py
tests/: test_01.py
