[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spTimeHelperPy"
authors = [
  { name="krokoreit", email="krokoreit@gmail.com" },
]
description = "A Python package for ..."
keywords = [
    "key1",
]
# dependencies = [
#   "foo", ….
# ]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/krokoreit/spTimeHelperPy"
"Source Code" = "https://github.com/krokoreit/spTimeHelperPy"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default.scripts]
dev = "py ./dev/dev01.py"
dev02 = "py ./dev/dev02.py"
dev03 = "py ./dev/dev03.py"
xmpl01 = "py ./examples/example01.py"
xmpl02 = "py ./examples/example02.py"
xmpl03 = "py ./examples/example03.py"

[tool.coverage.run]
source_pkgs = ["spTimeHelperPy", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
ppp = ["spTimeHelperPy/spTimeHelperPy", "*/spTimeHelperPy/src/spTimeHelperPy"]
tests = ["tests", "*/spTimeHelperPy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
